<resources>
    <string name="app_name">Calculator</string>
    <string name="demo_text">127683162</string>
    <string name="num_dot">.</string>
    <string name="num_0">0</string>
    <string name="op_equal">=</string>
    <string name="op_del">C</string>
    <string name="op_sub">-</string>
    <string name="op_addition">+</string>
    <string name="op_divide">/</string>
    <string name="op_multiply">x</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
</resources>