<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity"
    android:background="#424242">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LL_display"
        android:background="@color/cardview_light_background">

            <TextView
                android:id="@+id/TV_sol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:maxLines="2"
                android:paddingTop="15dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:paddingBottom="15dp"
                android:maxLength="35"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_gravity="end" />
            <TextView
                android:id="@+id/TV_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:paddingBottom="15dp"
                android:text=""
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:gravity="end|center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/LL_display"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/TL_NumPad">

            <TableRow
                android:layout_weight="1">
                <Button
                    android:id="@+id/bt_7"
                    android:text="@string/num_7"
                    style="@style/cal_num_button"
                    />
                <Button
                    android:id="@+id/bt_8"
                    android:text="@string/num_8"
                    style="@style/cal_num_button"
                    />
                <Button
                    android:id="@+id/bt_9"
                    android:text="@string/num_9"
                    style="@style/cal_num_button"
                    />
            </TableRow>
            <TableRow
                android:layout_weight="1">
                <Button
                    android:id="@+id/bt_4"
                    android:text="@string/num_4"
                    style="@style/cal_num_button"
                    />
                <Button
                    android:id="@+id/bt_5"
                    android:text="@string/num_5"
                    style="@style/cal_num_button"
                    />
                <Button
                    android:id="@+id/bt_6"
                    android:text="@string/num_6"
                    style="@style/cal_num_button"
                    />
            </TableRow>
            <TableRow
                android:layout_weight="1">
                <Button
                    android:id="@+id/bt_1"
                    android:text="@string/num_1"
                    style="@style/cal_num_button"
                    />
                <Button
                    android:id="@+id/bt_2"
                    android:text="@string/num_2"
                    style="@style/cal_num_button"
                    />
                <Button
                    android:id="@+id/bt_3"
                    android:text="@string/num_3"
                    style="@style/cal_num_button"
                    />
            </TableRow>
            <TableRow
                android:layout_weight="1">
                <Button
                    android:id="@+id/bt_dot"
                    android:text="@string/num_dot"
                    style="@style/cal_num_button"
                    />
                <Button
                    android:id="@+id/bt_0"
                    android:text="@string/num_0"
                    style="@style/cal_num_button"
                    />
                <Button
                    android:id="@+id/bt_equal"
                    android:text="@string/op_equal"
                    style="@style/cal_num_button"
                    />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:layout_margin="10dp"
            android:background="@drawable/op_menu"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_del"
                style="@style/cal_operator_button"
                android:text="@string/op_del" />

            <Button
                android:id="@+id/bt_divide"
                style="@style/cal_operator_button"
                android:text="@string/op_divide" />

            <Button
                android:id="@+id/bt_multiple"
                style="@style/cal_operator_button"
                android:text="@string/op_multiply" />

            <Button
                android:id="@+id/bt_subtraction"
                style="@style/cal_operator_button"
                android:text="@string/op_sub" />

            <Button
                android:id="@+id/bt_addition"
                style="@style/cal_operator_button"
                android:text="@string/op_addition" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>